<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/check_gps"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/check_gps"/>
    <item
        android:id="@+id/update"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/update"/>
    <item
        android:id="@+id/plateBrowser"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/platesBrowser"/>
    <item
        android:id="@+id/sysConfig"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sysConfig"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/exit"/>

</menu>